--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,13 +1,75 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+<head>
+    <meta charset="UTF-8" />
+    <title>{% block title %}BirdSafari{% endblock %}</title>
+    {% block css %}
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+        <link href="{{ asset('css/mainStyle.css') }}" rel="stylesheet">
+    {% endblock %}
+    <link rel="icon" type="image/x-icon" href="{{ asset('img/apple-touch-icon.png') }}" />
+</head>
+<body>
+<div class="container-fluid">
+
+    <nav class="navbar navbar-default" role="navigation">
+
+        <div class="navbar-header">
+            <p class="navbar-brand"><img src="apple-touch-icon.png" alt="Logo du site: Bird Safari"></p></div>
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menuPrincipal">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="menuPrincipal">
+            <ul class="nav navbar-nav navbar-right">
+
+                <li>
+                    <a href="{{ path('home') }}" class="text-center"> <!---->
+                        <span class="glyphicon glyphicon-home"></span> Accueil
+                    </a>
+                </li>
+
+
+                <li>
+                    <a href="#" class="text-center">
+                        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                            {{ app.user.username }}<!--Liste déroulante-->
+
+                        {% else %}
+                            Connexion
+                        {% endif %}
+                    </a>
+                </li>
+                {% if is_granted("ROLE_ADMIN") %}
+                <li>
+                    <a href="#" class="text-center">
+                        Administration
+                    </a>
+                </li>
+                {% endif %}
+                <li>
+                    <a href="{{ path('mission') }}" class="text-center">
+                        Notre mission
+                    </a>
+                </li>
+
+            </ul>
+        </div>
+    </nav>
+</div>
+
+
+    {% block body %}{% endblock %}
+
+<footer>
+    {% block foot %}{% endblock %}
+</footer>
+
+{% block js %}
+    <script src="{{ asset('js/jquery/jquery-3.2.1.min.js') }}"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+{% endblock %}
+
+</body>
 </html>
