--- a/src/AppBundle/Resources/views/propos.html.twig
+++ b/src/AppBundle/Resources/views/propos.html.twig
@@ -1,1 +1,9 @@
 {% extends "base.html.twig" %}
+
+{% block title %}{{ parent() }} - Notre Mission{% endblock %}
+{% block css %}{{ parent() }}{% endblock %}
+{% block body %}
+    <h1 class="text-center">Vous trouverez des informations sur notre mission ici.</h1>
+{% endblock %}
+{% block foot %}{% endblock %}
+{% block js %}{{ parent() }}{% endblock %}
