--- a/src/AppBundle/Resources/views/accueil.html.twig
+++ b/src/AppBundle/Resources/views/accueil.html.twig
@@ -1,6 +1,14 @@
-<html>
+{% extends "base.html.twig" %}
 
-<body>
-<h1>Bonjour je suis la page d'accueil</h1>
-</body>
-</html>
+{% block title %}{{ parent() }}-Notre Mission{% endblock %}
+{% block css %}{{ parent() }}{% endblock %}
+{% block body %}
+
+    <h1 class="text-center">Bonjour je suis la page d'accueil</h1>
+
+
+
+{% endblock %}
+{% block foot %}{% endblock %}
+{% block js %}{{ parent() }}{% endblock %}
+
