--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -1,6 +1,6 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-<h1>S'inscrire</h1>
+<h1 class="text-capitalize">{{ 'registration.submit'|trans }}<small> | <a href="{{ path('fos_user_security_login') }}">{{ 'security.login.submit'|trans }}</a></small></h1>
 
 {{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
     {{ form_widget(form) }}
@@ -8,3 +8,4 @@
     <input type="submit" value="{{ 'registration.submit'|trans }}" class="btn btn-default"/>
 </div>
 {{ form_end(form) }}
+
