Ajout de la carte vide. Début de personnalisation du formulaire d'inscription

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,7 +8,7 @@
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
         <link href="{{ asset('css/mainStyle.css') }}" rel="stylesheet">
     {% endblock %}
-    <link rel="icon" type="image/x-icon" href="{{ asset('web/img/apple-touch-icon.png') }}" />
+    <link rel="icon" type="image/x-icon" href="{{ asset('/../../Web/img/apple-touch-icon.png') }}" />
 </head>
 <body>
 <div class="container-fluid">
