Toutes les routes sont prêtes. Layout du blog et des observations. Ajout d'événement d'écoute à l'enregistrement.

--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -30,6 +30,7 @@
             </div>
         </div>
     </div>
+    <div class="g-recaptcha" data-sitekey="6LeivjIUAAAAANwUBcnp6aM0tsjlua6jPsYoJPZn"></div>
     <div class="col-sm-offset-2 col-sm-10">
         <input class="btn btn-primary" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
     </div>
