--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -1,5 +1,11 @@
 {% extends "base.html.twig" %}
 
+
+{% block js %}
+    {{ parent() }}
+    <script src="https://www.google.com/recaptcha/api.js"></script>
+
+{% endblock %}
 {% block body %}
 
 
