--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -62,7 +62,7 @@
                     </li>
                 {% endif %}
                 <li>
-                    <a href="{{ path('mission') }}" class="text-center">
+                    <a href="{{ path('blog_home') }}" class="text-center">
                         Blog
                     </a>
                 </li>
