--- a/web/css/mainStyle.css
+++ b/web/css/mainStyle.css
@@ -38,3 +38,28 @@
 #map {
     height: 500px;
 }
+
+/*Accueil*/
+.carousel-inner img {
+    width: 100%; /* Set width to 100% */
+    margin: auto;
+    min-height:200px;
+}
+
+/* Hide the carousel text when the screen is less than 600 pixels wide */
+@media (max-width: 600px) {
+    .carousel-caption {
+        display: none;
+    }
+}
+#siderContent
+{
+    background-color: #666666;
+    height:  1000px;
+}
+
+#observation
+{
+    background-color: #EEEEEE;
+    height:  1000px;
+}
