--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -3,7 +3,16 @@
 <h1 class="text-capitalize">{{ 'registration.submit'|trans }}<small> | <a href="{{ path('fos_user_security_login') }}">{{ 'security.login.submit'|trans }}</a></small></h1>
 
 {{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
-    {{ form_widget(form) }}
+    {{ form_row(form.email) }}
+    {{ form_row(form.username) }}
+    {{ form_row(form.plainPassword) }}
+
+    <label for="nat">{{ "Demander à être un Naturaliste"|trans }}</label><input id="nat" name="nat" type="checkbox" class=""/>
+    {{ form_row(form.firstName) }}
+    {{ form_row(form.lastName) }}
+    {{ form_row(form.birth) }}
+    {{ form_row(form.institution) }}
+    <div class="g-recaptcha" data-sitekey="6LeivjIUAAAAANwUBcnp6aM0tsjlua6jPsYoJPZn"></div>
 <div>
     <input type="submit" value="{{ 'registration.submit'|trans }}" class="btn btn-default"/>
 </div>
