--- a/src/AppBundle/Resources/views/accueil.html.twig
+++ b/src/AppBundle/Resources/views/accueil.html.twig
@@ -4,9 +4,67 @@
 {% block css %}{{ parent() }}{% endblock %}
 {% block body %}
 
-    <h1 class="text-center">Bonjour je suis la page d'accueil</h1>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+    </ol>
 
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+        <div class="item active">
+            <img src="https://placehold.it/1200x400?text=IMAGE" alt="Image">
+            <div class="carousel-caption">
+                <h3>Observ1</h3>
+                <p>Text d'observation ou auteur</p>
+            </div>
+        </div>
 
+        <div class="item">
+            <img src="https://placehold.it/1200x400?text=Another Image Maybe" alt="Image">
+            <div class="carousel-caption">
+                <h3>Observ2</h3>
+                <p>Texte d'observ. Auteur</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+
+<div class="container text-center">
+    <h3>Ce qu'on fait</h3><br>
+    <div class="row">
+        <div class="col-sm-4">
+            textBLABLABLA
+            <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+            <p>Notre mission</p>
+        </div>
+        <div class="col-sm-4">
+            textBLABLABLA/ video
+            <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+            <p>Project 2</p>
+        </div>
+        <div class="col-sm-4">
+            statistiques du jour
+            <div class="well">
+                <p>Some text..</p>
+            </div>
+            <div class="well">
+                <p>Some text..</p>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
 {% block foot %}{% endblock %}
