--- a/src/Birds/ObservationsBundle/Resources/views/Observations/observations.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/observations.html.twig
@@ -1,4 +1,4 @@
-{% extends "observationLayout.html.twig" %}
+{% extends "@BirdsObservations/observationLayout.html.twig" %}
 
 {% block search %}
 	<h1 class="text-center">Voici une observation</h1>
