--- a/src/DevTools/BlogBundle/Resources/views/Blog/index.html.twig
+++ b/src/DevTools/BlogBundle/Resources/views/Blog/index.html.twig
@@ -1,4 +1,4 @@
-{% extends "blogLayout.html.twig" %}
+{% extends "@DevToolsBlog/blogLayout.html.twig" %}
 
 {% block content %}
     <h1 class="text-center"> Hello I'm the blog </h1>
