--- a/src/Birds/ObservationsBundle/Resources/views/Observations/observations.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/observations.html.twig
@@ -1,9 +1,7 @@
 {% extends "@BirdsObservations/observationLayout.html.twig" %}
 
 {% block search %}
-	<h1 class="text-center">Voici une observation</h1>
+	<h1 class="text-center">Barre de recherche</h1>
 
 
 {% endblock %}
-
-{% block result %}{% endblock %}
