--- a/src/Birds/ObservationsBundle/Resources/views/Observations/creerObservation.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/creerObservation.html.twig
@@ -1,8 +1,12 @@
 {% extends "@BirdsObservations/observationLayout.html.twig" %}
 
 {% block content %}
-	{{ parent()}}
 	<h1 class="text-center">Ajout d'une observation</h1>
+	{{ parent()}}
 
+	{{ form_start(form)  }}
+	{{ form(form)  }}
+
+	{{ form_end(form) }}
 
 {% endblock %}
