--- a/web/css/mainStyle.css
+++ b/web/css/mainStyle.css
@@ -55,7 +55,7 @@
 #siderContent
 {
     background-color: #666666;
-    height:  1000px;
+    min-height: 1000px !important;
 
 }
 
@@ -73,7 +73,7 @@
 
 .bg-observation-main
 {
-    height: 1000px;
+    min-height: 1000px !important;
 }
 
 .panel
