Ajouter une observation: Autocomplétion v0.1 champs espece, dateAuto, géolocalisation, carte avec marqueur interactif, recentrer le marqueur à ma position.

--- a/src/Birds/ObservationsBundle/Resources/views/observationLayout.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/observationLayout.html.twig
@@ -42,6 +42,6 @@
 {% endblock %}
 {% block foot %}{% endblock %}
 {% block js %}{{ parent() }}
-	<script src="{{ asset('../web/js/mapGenerator.js') }}"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7OxaSU742N4m30QGtTnkwb7TSoBSCzrc&callback=initMap" async defer></script>
+	<script src="{{ asset('js/mapGenerator.js') }}"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7OxaSU742N4m30QGtTnkwb7TSoBSCzrc&callback=initMap&libraries=drawing," async defer></script>
 {% endblock %}
