Affichage des 5dernières observations sur la carte. Rétablissement de la page d'enregistrement. Ajout du logo du site. Déplacement du champs connexion à droite du menu de navigation. Modifications légères du style pour les observations.

--- a/src/Birds/ObservationsBundle/Resources/views/Observations/observations.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/observations.html.twig
@@ -3,5 +3,31 @@
 {% block search %}
 	<h1 class="text-center">Barre de recherche</h1>
 
+{% endblock %}
+
+{% block content %}
+	<div class="row">
+		<h1>Toutes les observations</h1>
+
+        {{ parent() }}
+		<h3>Résultat en texte:</h3>
+
+	</div>
+    {%  for obs in observations %}
+		<div class="observationCointainer row" >
+			<p class="col-sm-8">{{ obs.birdname }}</p>
+			<p class="col-sm-2">{{ obs.user.username }}</p>
+			<p class="col-sm-2">{{ obs.date | date('d-m-Y',"Europe/Paris") }}</p>
+			<div class="coords" hidden>{{ obs.latitude }};{{ obs.longitude }}</div>
+		</div>
+    {% else %}
+		Pas de résultats pour cette recherche.
+    {% endfor %}
+
+{% endblock %}
+
+{% block js %}
+	{{ parent() }}
+	<script src="{{ asset('js/observations/MapDispatcher.js') }}"></script>
 
 {% endblock %}
