--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,7 +8,8 @@
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
         <link href="{{ asset('css/mainStyle.css') }}" rel="stylesheet">
     {% endblock %}
-    <link rel="icon" type="image/x-icon" href="{{ asset('/../../Web/img/apple-touch-icon.png') }}" />
+    <link rel="icon" type="image/x-icon" href="{{ asset('img/fake_logo.svg') }}" />
+
 </head>
 <body>
 <div class="container-fluid">
@@ -16,12 +17,13 @@
     <nav class="row navbar navbar-default" role="navigation">
 
         <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menuPrincipal">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-            <p class="navbar-brand"><img src="apple-touch-icon.png" alt="Logo du site: Bird Safari"></p></div>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menuPrincipal">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+                <p class="navbar-brand"><img id="logoDuSite" src="{{ asset('img/fake_logo.svg') }}" alt = "Logo du site: Bird Safari"> </p>
+        </div>
         <div class="collapse navbar-collapse" id="menuPrincipal">
             <ul class="nav navbar-nav navbar-right">
 
@@ -39,6 +41,21 @@
 
 
 
+
+                <li>
+                    <a href="{{ path('blog_home') }}" class="text-center">
+                        Blog
+                    </a>
+                </li>
+
+
+
+                <li>
+                    <a href="{{ path('mission') }}" class="text-center">
+                        Notre mission
+                    </a>
+                </li>
+                
                 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                     <li class="dropdown">
                         <a class="dropdown-toggle text-center" data-toggle="dropdown" href="#">
@@ -61,20 +78,6 @@
                         </a>
                     </li>
                 {% endif %}
-                <li>
-                    <a href="{{ path('blog_home') }}" class="text-center">
-                        Blog
-                    </a>
-                </li>
-
-
-
-                <li>
-                    <a href="{{ path('mission') }}" class="text-center">
-                        Notre mission
-                    </a>
-                </li>
-
             </ul>
         </div>
     </nav>
