--- a/src/Birds/ObservationsBundle/Resources/views/Observations/onHold.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/onHold.html.twig
@@ -27,7 +27,7 @@
 {% endblock %}
 
 {% block js %}
-	<script>var page="all"</script>
+	<script>var page="wait"</script>
 	{{ parent() }}
 	<script src="{{ asset('js/observations/MapDispatcher.js') }}"></script>
 
