--- a/src/Birds/ObservationsBundle/Resources/views/Observations/creerObservation.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/creerObservation.html.twig
@@ -45,6 +45,7 @@
 {% endblock %}
 
 {% block js %}
+	<script>var page="add"</script>
 	{{ parent() }}
 
 	<script src={{ asset("js/observations/creerObservation.js") }}></script>
