Première ébauche barre de recherche. Entités Observation et Image changées. Saisie d'observations améliorée.

--- a/src/Birds/ObservationsBundle/Resources/views/Observations/creerObservation.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/creerObservation.html.twig
@@ -12,6 +12,7 @@
 
         {{ form_start(form)  }}
         {{ form_row(form.birdname, {'label':'Oiseau:'})  }}
+		{{ form_row(form.notSure, {'label':'Je ne suis pas sûr de mon observation'})   }}
         {{ form_row(form.date, {'label':'Date de l\'observation:'}) }}
 		<div class="row">
 			<div class="col-sm-12">
