--- a/src/Birds/ObservationsBundle/Resources/views/observationLayout.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/observationLayout.html.twig
@@ -5,11 +5,17 @@
 {% block body %}
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-sm-12 bg-observation-search">
+
+
+			<div class="col-sm-12 bg-observation-search text-center">
 				{% block search %}
-					<h1 class="text-center">ICI SE TROUVERA LA BARRE DE RECHERCHE</h1>
+					{{ render(controller("BirdsObservationsBundle:Observation:searchBar")) }}
 				{% endblock %}
 			</div>
+
+
+
+
 			<div class="col-sm-3 bg-observation-side">
                 {% block sideMenu %}
 
@@ -22,9 +28,9 @@
 
 							<ul class="nav nav-pills text-center">
 
-								<li class="col-sm-12 col-xs-4" id="allObs"><a href={{ path("birds_observations") }}>{{ "Les voir toutes"|trans }}</a></li>
-								<li class="col-sm-12 col-xs-4" id="addObs"><a href={{ path("birds_observations_add") }}>{{ "En faire une"|trans }}</a></li>
-								<li class="col-sm-12 col-xs-3" id="myObs"><a href={{ path("birds_my_observations") }}>{{ "Voir les miennes"|trans }}</a></li>
+								<li class="col-sm-12 col-xs-4" id="allObs"><a href={{ path("birds_observations") }}>{{ "Toutes les observations"|trans }}</a></li>
+								<li class="col-sm-12 col-xs-4" id="addObs"><a href={{ path("birds_observations_add") }}>{{ "Nouvelle observation"|trans }}</a></li>
+								<li class="col-sm-12 col-xs-3" id="myObs"><a href={{ path("birds_my_observations") }}>{{ "Mes Observations"|trans }}</a></li>
 							</ul>
 						</div>
 					</div>
@@ -55,7 +61,9 @@
 {% endblock %}
 {% block foot %}{% endblock %}
 {% block js %}{{ parent() }}
-	<script src="{{ asset('js/mapGenerator.js') }}"></script>
+	<script src="{{ asset('js/observations/mapGenerator.js') }}"></script>
 	<script src="{{ asset('js/observations/mainObservationLayout.js') }}"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7OxaSU742N4m30QGtTnkwb7TSoBSCzrc&callback=initMap&libraries=drawing,geometry" async defer></script>
+	<script src="{{ asset('js/observations/searchBar.js') }}"></script>
+
 {% endblock %}
