Tentative d'amélioration des performances de la barre de recherche et des champs EntityType (échec)

--- a/src/Birds/ObservationsBundle/Resources/views/Observations/mesObservations.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/mesObservations.html.twig
@@ -6,7 +6,7 @@
 
 {% block content %}
 	<div class="row">
-		<h1>Toutes mes observations</h1>
+		<h1>Mes observations</h1>
 
         {{ parent() }}
 		<h3>Résultat en texte:</h3>
