--- a/src/Birds/ObservationsBundle/Resources/views/Observations/modifierObservation.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/modifierObservation.html.twig
@@ -1,17 +1,17 @@
 {% extends "@BirdsObservations/observationLayout.html.twig" %}
 
-
 {% block css %}
-	{{ parent() }}
+    {{ parent() }}
 	<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.12/themes/smoothness/jquery-ui.css" />
 {% endblock %}
 
 {% block content %}
-	<h1>Ajoutez une observation</h1>
 	<div class="form-group">
+	<h1>Modifiez l'observation n°{{ obs.id }}</h1>
 
         {{ form_start(form)  }}
         {{ form_row(form.birdname, {'label':'Oiseau:'})  }}
+        {{ form_row(form.notSure, {'label':'Je ne suis pas sûr de mon observation'})   }}
         {{ form_row(form.date, {'label':'Date de l\'observation:'}) }}
 		<div class="row">
 			<div class="col-sm-12">
@@ -33,7 +33,7 @@
 			<p class="btn btn-default col-sm-4 col-sm-offset-4" id="useMyPos">Utiliser ma position</p>
 		</div>
 		<hr>
-		{{ form_row(form.image)}}
+        {{ form_row(form.image)}}
         {{ form_rest(form) }}
 		<input type="submit" class="btn btn-success"/>
         {{ form_end(form) }}
@@ -45,7 +45,8 @@
 {% endblock %}
 
 {% block js %}
-	{{ parent() }}
+	<script>var page="add"</script>
+    {{ parent() }}
 
 	<script src={{ asset("js/observations/creerObservation.js") }}></script>
 	<script src={{ asset("js/observations/positionSelector.js") }}></script>
