--- a/src/Birds/ObservationsBundle/Resources/views/Observations/search.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/search.html.twig
@@ -11,7 +11,8 @@
 
 <div id="paramAv" class="from-group ">
 
-    <div class="row col-xs-12 col-sm-12"> {{ form_row(searchBar.espece) }} </div>
+
+
 
 
     <div class="row form-inline col-xs-12 col-sm-12">
@@ -42,9 +43,13 @@
             {{ form_row(searchBar.longitude) }}
         </div>
         <div class="row form-inline col-xs-12 col-sm-12">
-            <div class="col-xs-12 col-sm-8"> {{ form_row(searchBar.distanceDuCentre) }}</div>
-            <div class="col-xs-12 col-sm-4"> <input type="text" disabled id="distanceFromPoint"/><label for="distanceFromPoint"> mètres</label></div>
-            <div id="mapR"></div>
+            <div class="col-xs-12 col-sm-12"><div id="mapR"></div>
+                <div class="col-xs-12 col-sm-4"><btn class="btn btn-default" id="useMyPosR">Ma position<span class="glyphicon glyphicon-map-marker" ></span></btn></div>
+                <div class="col-xs-12 col-sm-4"> {{ form_row(searchBar.distanceDuCentre) }}</div>
+                <div class="col-xs-12 col-sm-4"> <input type="text" disabled id="distanceFromPoint" value="100"/><label for="distanceFromPoint"> mètres</label></div>
+            </div>
+
+
         </div>
 
     </div>
