--- a/web/css/mainStyle.css
+++ b/web/css/mainStyle.css
@@ -39,6 +39,11 @@
     height: 500px;
 }
 
+#mapR {
+    display: block;
+    height: 300px;
+}
+
 /*Accueil*/
 .carousel-inner img {
     width: 100%; /* Set width to 100% */
@@ -103,6 +108,42 @@
     margin-top: -20px;
     width: 90px;
     height: 90px;
+
+}
+.slider{
+    -webkit-appearance: none;
+    width: 100%;
+    height: 24px;
+    background: #d3d3d3;
+    outline: none;
+    opacity:0.7;
+    -webkit-transition: opacity .15s ease-in-out;
+    transition: opacity .15s ease-in-out;
+}
+.slider:hover {
+    opacity:1;
+}
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 24px;
+    height: 24px;
+    background: #4CAF50;
+    cursor: pointer;
+}
+.slider::-moz-range-thumb {
+    width: 24px;
+    height: 24px;
+    border: 0;
+    background: #4CAF50;
+    cursor: pointer;
+}
+
+#distanceFromPoint
+{
+    color:black;
+    font-size: larger;
+    text-align: right;
 
 }
 
