--- a/src/Birds/ObservationsBundle/Resources/views/Observations/modifierObservation.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/modifierObservation.html.twig
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.12/themes/smoothness/jquery-ui.css" />
 {% endblock %}
 
-{% block content %}
+{% block overallContent %}
 	<div class="form-group">
 	<h1>Modifiez l'observation n°{{ obs.id }}</h1>
 
