--- a/src/Birds/ObservationsBundle/Resources/views/Observations/creerObservation.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/creerObservation.html.twig
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.12/themes/smoothness/jquery-ui.css" />
 {% endblock %}
 
-{% block content %}
+{% block overallContent %}
 	<h1>Ajoutez une observation</h1>
 	<div class="form-group">
 
@@ -17,7 +17,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<p>Désignez le lieu de votre observation:</p>
-                {{ parent() }}
+				{% block map %}{{ parent() }}{% endblock %}
 			</div>
 		</div>
 
