--- a/src/Birds/ObservationsBundle/Resources/views/observationLayout.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/observationLayout.html.twig
@@ -17,7 +17,8 @@
 
 
 			<div class="col-sm-3 bg-observation-side">
-				<button class="btn btn-default"><span class="glyphicon glyphicon-chevron-right"></span> Menu</button>
+				<button class="btn btn-default storing" id="menuLayout"><span class="glyphicon glyphicon-chevron-down"></span> Menu</button>
+				<div>
                 {% block sideMenu %}
 
 					<div class="panel panel-info">
@@ -49,21 +50,25 @@
 					</div>
 					{% endif  %}
 				{% endblock %}
+				</div>
 			</div>
 			<div class="col-sm-9 bg-observation-main">
 				{% block overallContent %}
-					<div class="col-sm-6" id="obsLayout">
-						<button class="btn btn-default "><span class="glyphicon glyphicon-chevron-right"></span> Liste</button>
+					<div class="col-sm-6" >
+						<button class="btn btn-default storing" id="obsLayout"><span class="glyphicon glyphicon-chevron-down"></span> Liste</button>
+						<div>
 						{% block content %}
 
 						{% endblock %}
+						</div>
 					</div>
-					<div class="col-sm-6" id="mapLayout">
-						<button class="btn btn-default"><span class="glyphicon glyphicon-chevron-right"></span> Carte</button>
-
+					<div class="col-sm-6">
+						<button class="btn btn-default storing" id="mapLayout"><span class="glyphicon glyphicon-chevron-down"></span> Carte</button>
+						<div>
                         {% block map %}
 							<div id="map"></div>
 						{% endblock %}
+						</div>
 					</div>
 				{% endblock %}
 
