--- a/src/Birds/ObservationsBundle/Resources/views/Observations/search.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/search.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(searchBar, {attr:{"class":"form-inline", "action":path("birds_observations")}}) }}
+{{ form_start(searchBar, {attr:{"class":"form-inline", "action":path("birds_treatsearch")}}) }}
 <div class="row">
     <div class="form-group form-inline">
         {{ form_row(searchBar.searchBar,{label_attr:{"class":"hidden"}}) }}
